Working menu. Settings and Quit panels have been pulled out into their own prefabs so that they can be accessed from other places. For example, the main menu should probably have a Settings button as well.

--- a/Assembly-CSharp-vs.csproj
+++ b/Assembly-CSharp-vs.csproj
@@ -46,8 +46,10 @@
 	</Reference>
   </ItemGroup>
   <ItemGroup>
+     <Compile Include="Assets\Scripts\GUI\HUD.cs" />
+     <Compile Include="Assets\Scripts\GUI\Quit.cs" />
+     <Compile Include="Assets\Scripts\GUI\Settings.cs" />
      <Compile Include="Assets\Scripts\GameManager.cs" />
-     <Compile Include="Assets\Scripts\HUD.cs" />
      <Compile Include="Assets\Scripts\Level.cs" />
  <Reference Include="UnityEngine.UI">
  <HintPath>D:/Programs/Unity/Editor/Data/UnityExtensions/Unity/GUISystem/UnityEngine.UI.dll</HintPath>
